tests/lang/parse-fail-dup-attrs-4.err.exp
error: attribute 'services.ssh.port' already defined at «stdin»:2:3

       at «stdin»:3:3:

            2|   services.ssh.port = 22;
            3|   services.ssh.port = 23;
             |   ^
